--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
    <h1>nossa primeira aula utilizando o github</h1> 
-    Conseguimos gerar nossa primeira paguina 
+    <h2>Conseguimos gerar nossa primeira paguina </h2>
 </body>
 </html>
