--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
    <h1>nossa primeira aula utilizando o github</h1> 
     <h2>Conseguimos gerar nossa primeira paguina </h2>
+    <h3>conseguimos colocar nossos primeiros titulos </h3>
 </body>
 </html>
